@@ -1,22 +1,20 @@
 package com.gameexpert.chat.service;
 
+import com.gameexpert.chat.dto.ChatMessageResponse;
 import com.gameexpert.chat.entity.ChatMessage;
 import com.gameexpert.chat.event.ChatSavedEvent;
-import org.springframework.context.ApplicationEventPublisher;
 import com.gameexpert.chat.repository.ChatMessageRepository;
-
-import java.util.List;
-
+import com.gameexpert.common.NotFoundException;
+import com.gameexpert.world.entity.World;
+import com.gameexpert.world.repository.WorldRepository;
+import lombok.RequiredArgsConstructor;
+import org.springframework.context.ApplicationEventPublisher;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import com.gameexpert.chat.dto.ChatMessageResponse;
-import com.gameexpert.common.NotFoundException;
-import com.gameexpert.world.repository.WorldRepository;
-import com.gameexpert.world.entity.World;
-
-import lombok.RequiredArgsConstructor;
+import java.util.List;
+import java.util.Objects;
 
 @Service
 @RequiredArgsConstructor
@@ -30,8 +28,10 @@ public class ChatService {
 
     @Transactional
     public ChatMessageResponse saveMessage(Long worldId, String sender, String content) {
-        // TODO Lv 5: 채팅을 저장하고 savedResponse(worldId, saved)의 결과를 반환합니다.
-        throw new UnsupportedOperationException("Lv 5: 채팅 저장을 구현하세요.");
+        World world = worldRepository.findById(worldId).orElseThrow(() -> new NotFoundException("WORLD_NOT_FOUND"));
+        ChatMessage saved = chatMessageRepository.save(new ChatMessage(world, sender, content));
+
+        return savedResponse(worldId, saved);
     }
 
     @Transactional(readOnly = true)
@@ -40,13 +40,14 @@ public class ChatService {
             throw new NotFoundException("WORLD_NOT_FOUND");
         }
 
-        int capped = Math.min(Math.max(limit, 1), MAX_LIMIT);
+        int capped = Math.clamp(limit, 1, MAX_LIMIT);
 
         List<ChatMessage> recent = chatMessageRepository
                 .findByWorldIdOrderByCreatedAtDescIdDesc(worldId, PageRequest.of(0, capped));
-
-        // TODO Lv 5: recent를 오래된 순서로 바꾸고 응답 DTO 목록으로 반환합니다.
-        return List.of();
+        return recent.reversed().stream()
+                .filter(Objects::nonNull)
+                .map(chat -> new ChatMessageResponse(chat.getSenderNickname(), chat.getContent(), chat.getCreatedAt()))
+                .toList();
     }
 
     private ChatMessageResponse savedResponse(Long worldId, ChatMessage saved) {
